# arduinolibserver

./: CMakeLists.txt  library.json
include/: IHttpRequest.h  IHttpResponse.h  IServer.h  ServerFactory.h  ServerFactoryInit.h  ServerProvider.h  ServerProviderInit.h  SimpleHttpRequest.h  SimpleHttpResponse.h
serverlib_scripts/: serverlib_execute_scripts.py  serverlib_pre_build.py
serverlib_scripts/serverlib_core/: L1_check_server_impl.py  L2_comment_server_impl.py  L3_process_and_register.py
